# Ecosystem_Simulator

./: Button.cpp  Button.h  CMakeLists.txt  Entity.cpp  Entity.h  Game.cpp  Game.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  MapGenerator.cpp  MapGenerator.h  PauseMenuState.cpp  PauseMenuState.h  PerlinNoise.cpp  PerlinNoise.h  Pig.cpp  Pig.h  Player.cpp  Player.h  README.md  State.cpp  State.h  Wolf.cpp  Wolf.h  aStarAlgoritm.cpp  aStarAlgoritm.h  main.cpp
Config/: gamestate_keybinds.ini  supported_keys.ini  window.ini
